CODETOOLS-7902960: Need to add some --add-exports to micros-javac (#9)